crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-tasks-disabled/snapshots/query - script not cached.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - test
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-tasks-disabled
---
[
  {
    "key": [
      "<workspace>/",
      "test"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/cache-tasks-disabled",
        "task_name": "test",
        "package_path": "<workspace>/"
      },
      "items": [
        {
          "execution_item_display": {
            "task_display": {
              "package_name": "@test/cache-tasks-disabled",
              "task_name": "test",
              "package_path": "<workspace>/"
            },
            "command": "vtt print-file package.json",
            "and_item_index": null,
            "cwd": "<workspace>/"
          },
          "kind": {
            "Leaf": {
              "Spawn": {
                "cache_metadata": null,
                "spawn_command": {
                  "program_path": "<tools>/vtt",
                  "args": [
                    "print-file",
                    "package.json"
                  ],
                  "all_envs": {
                    "NO_COLOR": "1",
                    "PATH": "<workspace>/node_modules/.bin:<tools>:<tools>"
                  },
                  "cwd": "<workspace>/"
                }
              }
            }
          }
        }
      ]
    },
    "neighbors": []
  }
]
